fix header content alignment issues

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -103,10 +103,10 @@ img {
 }
 
 .nav-btn {
-    padding: .2em .5em;
+    padding: 0.15em .25em 0.25em;
     border: 0;
     background-color: transparent;
-    font-size: 2rem;
+    font-size: inherit;
     font-weight: 700;
     color: white;
 }
@@ -154,9 +154,10 @@ a {
 }
 
 .logo-link {
-    display: block;
+    display: flex;
+    align-items: flex-end;
+    height: 100%;
     max-width: 11.5em;
-    padding-top: 2.2em;
     background-color: var(--main-color);
 }
 
@@ -167,7 +168,6 @@ a {
 .nav-link {
     visibility: hidden;
     font-weight: 700;
-    font-size: 2rem;
     color: white;
     text-decoration: none;
 }
@@ -301,7 +301,7 @@ body > * {
 
 .grid {
     display: grid;
-    grid-template-columns: minmax(1em, 1fr) repeat(3, minmax(0px, 18em)) minmax(1em, 1fr);
+    grid-template-columns: minmax(1rem, 1fr) repeat(3, minmax(0px, 18rem)) minmax(1rem, 1fr);
 }
 
 .container {
@@ -333,7 +333,7 @@ footer,
 
 .header-content {
     display: flex;
-    align-items: center;
+    font-size: 2rem;
 }
 
 nav {
@@ -474,7 +474,6 @@ footer {
     .nav-link {
         visibility: visible;
         margin: 0 2em;
-        font-size: 1.1rem;
     }
 
     /*=============== FORM ===============*/
@@ -494,7 +493,7 @@ footer {
     /*=============== CONTAINER ===============*/
 
     .grid {
-        grid-template-columns: minmax(0px, 1fr) repeat(3, minmax(0px, 18em)) minmax(0px, 1fr);
+        grid-template-columns: minmax(0px, 1fr) repeat(3, minmax(0px, 18rem)) minmax(0px, 1fr);
         grid-column-gap: 3em;
     }
 
@@ -507,10 +506,14 @@ footer {
         max-width: 100%;
     }
 
+    .header-content {
+        font-size: 1.1rem;
+    }
+
     nav {
         position: initial;
         width: initial;
-        height: 100%;
+        height: 3.5em;
         background-color: transparent;
     }
 
